--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -5,28 +5,11 @@
   </head>
   
   <body>
-    <div class="col-md-6"  style="background-color:#E6E6FA">
+    <div class="col-md-7"  style="background-color:#E6E6FA">
       <ul class="list-unstyled">
-        <strong>Current Menu Items</strong>
-        <li> 
-          Item #1 
-          <button type="button" class="btn btn-default">Edit</button>
-          <button type="button" class="btn btn-default">Delete</button> 
-        </li>
-        <li> 
-          Item #2 
-          <button type="button" class="btn btn-default">Edit</button>
-          <button type="button" class="btn btn-default">Delete</button> 
-        </li>
-        <li> 
-          Item #3 
-          <button type="button" class="btn btn-default">Edit</button>
-          <button type="button" class="btn btn-default">Delete</button> 
-        </li>
-      </ul>
-      
+
       <div class="table-responsive">
-        <table class="table"><strong>Current Menu Items (alt.)</strong>
+        <table class="table"><strong>Current Menu Items</strong>
           <tr>
             <td class="active">Name</td>
             <td class="success">Description</td>
@@ -71,20 +54,20 @@
 </div>
 
     </div>
-    <div class="col-md-6"  style="background-color:#6495ED">
+    <div class="col-md-5"  style="background-color:#6495ED">
       <strong class="text-center">Form to Edit</strong>
-      <form class="form-inline">
+      <form class="form-horizontal">
         <div class="form-group">
           <label class="sr-only" for="itemName">Name</label>
-          <input type="text" class="form-control" placeholder="Name">
+          <textarea type="text" class="form-control" placeholder="Name" rows="1"></textarea>
         </div>
         <div class="form-group">
           <label class="sr-only" for="itemDescription">Description</label>
-          <input type="text" class="form-control" placeholder="Description">
+          <textarea  type="text" class="form-control" placeholder="Description" rows="5"></textarea>
         </div>
         <div class="form-group">
           <label class="sr-only" for="itemPrice">Price</label>
-          <input type="text" class="form-control" placeholder="Price($)">
+          <textarea type="text" class="form-control" placeholder="Price($)" rows="1"></textarea>
         </div>
         <button type="button" class="btn btn-default">Done</button>
       </form>
