--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!---CSS-->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+  
   </head>
   
   <body>
+      <div class="col-md-5"  style="background-color:#6495ED">
+      <strong class="text-center">Form to Edit</strong>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="itemName">Name</label>
+          <textarea type="text" class="form-control" placeholder="Name" rows="1"></textarea>
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="itemDescription">Description</label>
+          <textarea  type="text" class="form-control" placeholder="Description" rows="5"></textarea>
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="itemPrice">Price</label>
+          <textarea type="text" class="form-control" placeholder="Price($)" rows="1"></textarea>
+        </div>
+        <button type="button" class="btn btn-default">Done</button>
+      </form>
+    </div>
+    
     <div class="col-md-7"  style="background-color:#E6E6FA">
-      <ul class="list-unstyled">
-
       <div class="table-responsive">
         <table class="table"><strong>Current Menu Items</strong>
           <tr>
@@ -49,28 +72,9 @@
               <button type="button" class="btn btn-default">Delete</button>
             </td>
           </tr>
-          
         </table>
-</div>
+      </div>
+    </div>
 
-    </div>
-    <div class="col-md-5"  style="background-color:#6495ED">
-      <strong class="text-center">Form to Edit</strong>
-      <form class="form-horizontal">
-        <div class="form-group">
-          <label class="sr-only" for="itemName">Name</label>
-          <textarea type="text" class="form-control" placeholder="Name" rows="1"></textarea>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="itemDescription">Description</label>
-          <textarea  type="text" class="form-control" placeholder="Description" rows="5"></textarea>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="itemPrice">Price</label>
-          <textarea type="text" class="form-control" placeholder="Price($)" rows="1"></textarea>
-        </div>
-        <button type="button" class="btn btn-default">Done</button>
-      </form>
-    </div>
   </body>
 </html>
