--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -13,13 +13,19 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
+          <h1 class="header">Norseman Dashboard</h1>
+        </div>
+      </div>
+
+      <div class="row">
 
         <div class="col-md-5 form-container">
           <strong class="text-center">Form to Edit</strong>
           <form class="form-horizontal">
             <div class="form-group">
               <label class="sr-only" for="itemName">Name</label>
-              <textarea type="text" class="form-control" placeholder="Name" rows="1"></textarea>
+              <input type="text" class="form-control" placeholder="Name">
             </div>
             <div class="form-group">
               <label class="sr-only" for="itemDescription">Description</label>
@@ -27,7 +33,7 @@
             </div>
             <div class="form-group">
               <label class="sr-only" for="itemPrice">Price</label>
-              <textarea type="text" class="form-control" placeholder="Price($)" rows="1"></textarea>
+              <input type="text" class="form-control" placeholder="Price($)">
             </div>
             <button type="button" class="btn btn-default">Done</button>
           </form>
