--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -16,14 +16,34 @@
     
     <!--Parse-->
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.4.0.min.js"></script>
+    <script type="text/javascript" src="javascript/script.js"></script>
 
   </head>
   
   <body>
-    <div class="container">
+    <div class="container auth-form hidden">
+      <div class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputUsername" class="sr-only">Username</label>
+        <input type="username" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="">
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" onclick="login();">Sign in</button>
+      </div>
+    </div>
+
+    <div class="container main-content hidden">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-11">
           <h1 class="header">Norseman Dashboard</h1>
+        </div>
+        <div class="col-md-1">
+          <a onclick="logout();">Log Out</a>
         </div>
       </div>
 
@@ -31,7 +51,7 @@
 
         <div class="col-md-5 form-container">
           <strong class="text-center">Form to Edit</strong>
-          <form class="form-horizontal main-form">
+          <div class="form-horizontal main-form">
             <div class="form-group">
               <label class="sr-only" for="itemName">Name</label>
               <input type="text" class="form-control item-name" placeholder="Name">
@@ -48,8 +68,8 @@
               <label class="sr-only" for="itemImage">Background Image</label>
               <input type="file" id="bg-image-upload">
             </div>
-            <button type="button" class="btn btn-default" onclick="save();">Update</button>
-          </form>
+            <button type="button" onclick="save();" class="btn btn-default">Update</button>
+          </div>
         </div>
       
         <div class="col-md-7 table-container">
@@ -67,88 +87,9 @@
       </div>
     </div>
 
-    <!--JQuery script-->
     <script>
-      Parse.initialize("bUpIWG3XoPGQxsS3r1vNfDiDzKExyvUBru97msYU", "TTOqKMRGEhNEeTOuOoPu5hEqdjPf9HX1JXnLU3x8");
-
-      var tableElement = '<tr class="generated-row">' +
-                            '<td class="active item-name"></td>' +
-                            '<td class="success item-description"></td>' +
-                            '<td class="warning item-price"></td>' +
-                            '<td class="info">' +
-                              '<button type="button" class="btn btn-default btn-edit">Edit</button>' +
-                              '<button type="button" class="btn btn-default">Delete</button>' +
-                            '</td>' +
-                          '</tr>';
-
-      var NorsemanMenuObject = Parse.Object.extend("NorsemanMenuObject");
-      var norsemanMenuObject = new NorsemanMenuObject();
-
-      fetchMenu();
-
-      function fetchMenu() {
-        norsemanMenuObject.fetch({
-          success: function(myObject) {
-            populateTable(myObject);
-          },
-          error: function(myObject, error) {
-            alert('Failed to fetch an object, with error code: ' + error.message);
-          }
-        });
-      }
-
-      function populateTable(myObject) {
-        $('.generated-row').remove();
-        myObject.attributes.results.forEach(function(element, i) {
-          $(".table").append(tableElement);
-          $(".table tr:nth(" + (i + 1) + ")").attr("data-id", element.objectId);
-          $(".table tr:nth(" + (i + 1) + ") .btn-edit").attr("onclick", "edit('" + element.objectId + "');");
-          $(".table tr:nth(" + (i + 1) + ") td.item-name").text(element.name);
-          $(".table tr:nth(" + (i + 1) + ") td.item-description").text(element.description);
-          $(".table tr:nth(" + (i + 1) + ") td.item-price").text(element.price);
-        });
-      }
-
-      function edit(id) {
-        $(".active-edit").removeClass("active-edit");
-        $(".table tr[data-id=" + id + "]").addClass("active-edit");
-        $('.main-form .item-name').val($(".active-edit .item-name").text());
-        $('.main-form .item-description').val($(".active-edit .item-description").text());
-        $('.main-form .item-price').val($(".active-edit .item-price").text());
-      }
-
-      function save() {
-        var element = $('.active-edit');
-        if(element.length) {
-          var elementId = element.attr("data-id");
-          var elementName = $('.main-form .item-name').val();
-          var elementDescription = $('.main-form .item-description').val();
-          var elementPrice = $('.main-form .item-price').val();
-          norsemanMenuObject.set("objectId", elementId);
-          norsemanMenuObject.set("name", elementName);
-          norsemanMenuObject.set("description", elementDescription);
-          norsemanMenuObject.set("price", elementPrice);
-
-          var fileUploadControl = $("#bg-image-upload")[0];
-          if (fileUploadControl.files.length > 0) {
-            var file = fileUploadControl.files[0];
-            var parseFile = new Parse.File("photo.jpg", file);
-            norsemanMenuObject.set("background", parseFile);
-          }
-
-          norsemanMenuObject.save(null, {
-            success: function(myObject) {
-              $('.active-edit td.item-name').text(elementName);
-              $('.active-edit td.item-description').text(elementDescription);
-              $('.active-edit td.item-price').text(elementPrice);
-            },
-            error: function(myObject, error) {
-              alert('Failed to edit an object, with error code: ' + error.message);
-            }
-          });
-        }
-      }
-
+      init();
     </script>
+
   </body>
 </html>
