--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.4.0.min.js"></script>
 
   </head>
-  <body id="body" class="fp-viewing-0">
+  <body id="body" class="fp-viewing-0 hidden">
 
     <section id="fullpage">
       <section class="section" id="page1">
@@ -88,6 +88,7 @@
           'verticalCentered': false,
           'easingcss3': 'ease-in-out'
         });
+        $('body').removeClass('hidden');
       }
 
     </script>
