I need to hold the horses with loading. those classes break the scrolling library

--- a/index.html
+++ b/index.html
@@ -27,18 +27,15 @@
     <script type="text/javascript" src="javascript/script.js"></script>
 
   </head>
-  <body id="body" class="fp-viewing-0 hidden">
+  <body id="body" class="fp-viewing-0">
 
     <section id="fullpage">
       <section class="section" id="page1">
         <header>The Norseman</header>
         <footer onclick="$.fn.fullpage.moveTo(2);">
-          Menu
-          <i class="fa fa-hand-o-down fa-lg"></i>
+          Menu <i class="fa fa-hand-o-down fa-lg"></i>
         </footer>
       </section>
-      
-
     </section>
     
   </body>
